<resources>
    <string name="app_name">Cafe Shades</string>
    <string name="title_activity_main_second">MainActivity</string>
    <string name="title_home">Cafe Shades</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_cart">Cart</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_profile">Profile</string>
    <string name="card_item_desc">Chai is the best, Coffee is the best, </string>
    <string name="log_in">Log In</string>
    <string name="title_app_name">Cafe Shades</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_floor_house_number">Floor Number</string>
    <string name="hint_building_street_name">Building Name</string>
    <string name="hint_landmark">Landmark</string>
    <string name="title_login">Login</string>
    <string name="hint_enter_otp">Enter OTP</string>
    <string name="hint_resend_otp">Resend OTP</string>
    <string name="hint_get_otp">GET OTP</string>
    <string name="hint_new_user">New User?</string>
    <string name="rupee_symbol">₹</string>
    <string name="add">+ Add</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="item_name">Item Name</string>
    <string name="item_image">item_image</string>
    <string name="total">Total:</string>
    <string name="item_total">Item total</string>
    <string name="taxes_and_charges">Taxes and Charges</string>
    <string name="your_order">Your Order</string>
    <string name="cart_empty_hint">Add something refreshing to your cart</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="btn_view_order">View Order</string>
    <string name="btn_collapse">^</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="office_number">Office Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="msg_token_fmt">token</string>
    <string name="empty_string" />
</resources>