<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_margin="8sp"
    android:background="@drawable/card_items_round_corner"
    android:elevation="3sp"
    android:padding="10sp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/item_name"
        android:layout_alignBottom="@+id/ll_price"
        android:layout_alignTop="@+id/ll_price"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <LinearLayout
        android:id="@+id/ll_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_item_name"
        android:gravity="end|center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:fontFamily="@font/axiforma_medium"
            android:maxLines="3"
            android:text="@string/rupee_symbol"
            android:textColor="@color/colorSecondary"
            android:textSize="17sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_price"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:fontFamily="@font/axiforma_medium"
            android:maxLines="3"
            android:textColor="@color/colorSecondary"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:layout_margin="5sp"
            android:background="@drawable/text_view_round_corners"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_margin="8sp"
                android:text="@string/add"
                android:textColor="@color/colorPrimary"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_card_item_subtract_quantity"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:text="@string/minus"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_quantity"
                style="@style/TextAppearance.App.Button"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:gravity="center"
                android:text="@string/zero"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_card_item_add_quantity"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:text="@string/plus"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>