<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7sp"
    android:background="@drawable/card_items_round_corner"
    android:elevation="3sp">

    <ImageView
        android:id="@+id/iv_item_image"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:background="@drawable/image_circular_border"
        android:contentDescription="@string/item_image"
        android:src="@drawable/cappuccino_coffee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_item_image"
        android:layout_gravity="center"
        android:layout_marginEnd="5sp"
        android:layout_toEndOf="@id/iv_item_image"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_item_favourite"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_item_favourite"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:button="@drawable/check_box_favourite_state"
                app:buttonTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:maxLines="3"
            android:text="@string/card_item_desc"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_item_image"
        android:layout_toEndOf="@+id/iv_item_image"
        android:gravity="end|center"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:fontFamily="@font/axiforma_medium"
            android:maxLines="3"
            android:text="@string/rupee_symbol"
            android:textColor="@color/colorSecondary"
            android:textSize="17sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_price"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:fontFamily="@font/axiforma_medium"
            android:maxLines="3"
            android:textColor="@color/colorSecondary"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:layout_margin="5sp"
            android:background="@drawable/text_view_round_corners"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_margin="8sp"
                android:text="@string/add"
                android:textColor="@color/colorPrimary"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_card_item_subtract_quantity"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:text="@string/minus"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_quantity"
                style="@style/TextAppearance.App.Button"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:gravity="center"
                android:text="@string/zero"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_card_item_add_quantity"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:text="@string/plus"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>