<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    android:scrollbars="none"
    tools:context=".fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        tools:context=".activities.MainActivity">

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_gravity="top"
                android:layout_marginTop="20sp"
                android:src="@mipmap/ic_logo_round" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_name"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:fontFamily="@font/axiforma_regular"
                android:text="@string/title_app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/colorPrimaryVariant"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_logo"
            tools:ignore="ExtraText">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10sp"
                android:fontFamily="@font/axiforma_regular"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/colorPrimaryVariant"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtIll_first_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5sp"
                    app:startIconDrawable="@drawable/ic_user_name"
                    android:layout_weight="1"
                    android:hint="@string/hint_first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtIll_last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5sp"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_user_name"
                    android:hint="@string/hint_last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtIll_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/hint_phone_number"
                app:startIconDrawable="@drawable/ic_phone"
                app:prefixText="+91">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtIll_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:startIconDrawable="@drawable/ic_user_email"
                android:hint="@string/hint_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:text="@string/hint_address"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtIll_floor_house_no"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_home"
                android:layout_marginTop="5sp"
                android:hint="@string/hint_floor_house_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_floor_house_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtIll_building_street_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:startIconDrawable="@drawable/ic_building"
                android:hint="@string/hint_building_street_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_building_street_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtIll_landmark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_landmark"
                android:layout_marginTop="10sp"
                android:hint="@string/hint_landmark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtIll_otp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:visibility="gone"
                android:hint="@string/hint_enter_otp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_resend_otp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5sp"
                android:text="@string/hint_resend_otp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="30sp"
                android:layout_marginBottom="30sp"
                android:fontFamily="@font/axiforma_regular"
                android:text="@string/hint_get_otp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>